# pxhist

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  COVERAGE.md  Cargo.toml  LICENSE  README.md  build.rs  coverage-detailed.sh  coverage.sh  deny.toml  install.sh  justfile  rustfmt.toml  sqlx-data.json
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: claude-auto-review.yml  claude.yml  coverage.yml  docs.yml  release.yml  rust.yml  security.yml
Formula/: pxh.rb
contrib/: atuin-to-pxh
demo/: ctrl-r.tape  fixture.json  publish.sh  recall.tape  record.sh  search.tape
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/pxh/: all.html  constant.CURRENT_SCHEMA_VERSION.html  constant.TIME_FORMAT.html  enum.PrettyExportString.html  fn.atomically_remove_lines_from_file.html  fn.atomically_remove_matching_lines_from_file.html  fn.binary_display_helper.html  fn.dedup_invocations.html  fn.default_db_path.html  fn.displayers.html  fn.effective_host_set.html  fn.generate_import_session_id.html  fn.get_hostname.html  fn.get_setting.html  fn.import_bash_history.html  fn.import_json_history.html  fn.import_zsh_history.html  fn.initialize_base_schema.html  fn.initialize_full_schema.html  fn.is_busy.html  fn.join_continuation_lines.html  fn.json_export.html  fn.migrate_host_settings.html  fn.present_results_human_readable.html  fn.pxh_config_dir.html  fn.pxh_data_dir.html  fn.read_local_machine_id.html  fn.resolve_hostname.html  fn.resolve_through_symlinks.html  fn.run_schema_migrations.html  fn.set_setting.html  fn.sqlite_connection.html  fn.sqlite_connection_full.html  fn.sqlite_connection_inner.html  fn.time_display_helper.html  fn.with_write_retry.html  index.html  sidebar-items.js  struct.Invocation.html  struct.QueryResultColumnDisplayer.html  (+1 more)
docs/pxh/helpers/: fn.build_remote_pxh_command.html  fn.default_remote_db_expr.html  fn.determine_is_pxhs.html  fn.determine_remote_pxh_path.html  fn.get_relative_path_from_home.html  fn.parse_ssh_command.html  fn.remote_pxh_candidates.html  index.html  sidebar-items.js
docs/pxh/recall/: index.html  sidebar-items.js  struct.RecallCommand.html
docs/pxh/secrets_patterns/: constant.PATTERNS_CRITICAL.html  constant.PATTERNS_HIGH.html  constant.PATTERNS_LOW.html  index.html  sidebar-items.js
docs/search.desc/pxh/: pxh-desc-0-.js
docs/search.index/: 00066548b1cb.js  001211e7f4fe.js  00223d0f7a43.js  0022e5055c50.js  0029ec2047c7.js  002b65927ac9.js  00303a66992a.js  0030810cb7fb.js  003209b745c2.js  00352c011e7d.js  0052d2682f.js  0053cd2de78a.js  00564c3c5c.js  0062e1600422.js  0067c539d4d6.js  006afc869fb9.js  00756273a23a.js  008df51338.js  00901d520627.js  009cfffa24.js  00a6600e23cb.js  00b2783f29df.js  00b34c103d22.js  00b8a79e2c5d.js  00b8e8403a27.js  00b964f8a8e7.js  00bcdb93e270.js  00f14c536146.js  00ffcec2a0ab.js  011ebc81967a.js  012493719c96.js  015936a522d0.js  015b05720738.js  015d720ad192.js  015ef13e3a6c.js  01748f8e86e2.js  01764c5a3e19.js  017a012fb900.js  0189e08ac9a4.js  018cfb285679.js  (+2174 more)
docs/search.index/crateNames/: cab60880d46a.js
docs/search.index/desc/: 08a0ab99e3cc.js  1d558492fdeb.js  2a49d4ee54c6.js  388dfabd7a76.js  453ee358de7e.js  5411392bf568.js  54b98d2ced2f.js  55b110a7d8cf.js  565013d64fea.js  5b3fe9ab15ee.js  671bbfdbd995.js  74178f90a36b.js  854d6db6c0c4.js  97cb6e55d2c4.js  9df9a3390b8b.js  b1f671b08327.js  b5eff02e97f2.js  e40fedc95bb4.js  e4616bce599d.js  e54a17fddb.js  e570b6743785.js  e866cb3a5d02.js  f9d2044e30a6.js  fd7f5ac28946.js
docs/search.index/entry/: 022c61b7dc81.js  091a34b8e8.js  0b286f188e78.js  0bde01592bcc.js  (+50 more)
src/: base_schema.sql  doctor.rs  lib.rs  main.rs  schema_migration.sql  secrets_patterns.rs
src/migrations/: 20220521180451_base_schema.sql
src/recall/: command.rs  config.rs  engine.rs  mod.rs  tui.rs
src/shell_configs/: pxh.bash  pxh.fish  pxh.zsh
tests/: doctor_test.rs  integration_tests.rs  interactive_shell_test.rs  recall_test.rs  scan_test.rs  shell_hooks_test.rs  shell_integration_simple_test.rs  ssh_sync_test.rs  sync_test.rs  unit.rs
tests/common/: mod.rs
tests/docker/: Dockerfile  e2e_test.sh
tests/resources/: fish_histfile  simple_bash_histfile  timestamped_bash_histfile  zsh_histfile  zsh_histfile_malformed  zsh_histfile_multiline
(+356 files in other folders)
