[package]
name = "pxh"
version = "0.4.0"
edition = "2024"
authors = [ "Chip Turner <cturner@pattern.net>" ]
description = """
pxh is a fast, flexible shell history mining tool.  It indexes all of
your shell history to give you total recall across one of your most
valuable reservoirs of knowledge, your shell history."""
documentation = "https://github.com/chipturner/pxhist"
homepage = "https://github.com/chipturner/pxhist"
repository = "https://github.com/chipturner/pxhist"
keywords = ["shell", "history", "search"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
bstr = { version = "1.11.3", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive", "env", "wrap_help"] }
log = "0.4.25"
env_logger = "0.11.6"
home = "0.5.11"
itertools = "0.14.0"
prettytable-rs = "0.10.0"
rand = "0.8.5"
chrono = "0.4.39"
users = "0.11.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.136", features = ["arbitrary_precision"] }
regex = "1.11.1"
hostname = "0.4.0"
rusqlite = { version = "0.33.0", features = ["bundled", "functions"] }
tempfile = "3.15.0"

[dev-dependencies]
assert_cmd = "2.0.16"
