[package]
name = "pxh"
version = "0.4.0"
edition = "2024"
authors = [ "Chip Turner <cturner@pattern.net>" ]
description = """
pxh is a fast, flexible shell history mining tool.  It indexes all of
your shell history to give you total recall across one of your most
valuable reservoirs of knowledge, your shell history."""
documentation = "https://github.com/chipturner/pxhist"
homepage = "https://github.com/chipturner/pxhist"
repository = "https://github.com/chipturner/pxhist"
keywords = ["shell", "history", "search"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
bstr = { version = "1.12.1", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env", "wrap_help"] }
log = "0.4.29"
env_logger = "0.11.8"
home = "0.5.12"
itertools = "0.14.0"
prettytable-rs = "0.10.0"
rand = "0.9.2"
chrono = "0.4.43"
uzers = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
regex = "1.12.2"
hostname = "0.4.2"
rusqlite = { version = "0.38.0", features = ["bundled", "functions"] }
tempfile = "3.24.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
which = "8.0"
rexpect = "0.6"
