[package]
name = "pxh"
version = "0.9.4"
edition = "2024"
rust-version = "1.88"
authors = [ "Chip Turner <cturner@pattern.net>" ]
description = """
pxh is a fast, cross-shell history mining tool with interactive fuzzy search,
secret scanning, and bidirectional sync across machines. It indexes bash and
zsh history in SQLite with rich metadata for powerful recall."""
documentation = "https://github.com/chipturner/pxhist"
homepage = "https://github.com/chipturner/pxhist"
repository = "https://github.com/chipturner/pxhist"
keywords = ["shell", "history", "search", "bash", "zsh"]
categories = ["command-line-utilities"]
license = "MIT"

[package.metadata.release]
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
bstr = { version = "1.12.1", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env", "wrap_help"] }
log = "0.4.29"
env_logger = "0.11.8"
home = "0.5.12"
itertools = "0.14.0"
prettytable-rs = "0.10.0"
rand = "0.10.0"
chrono = "0.4.43"
uzers = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
regex = "1.12.2"
hostname = "0.4.2"
rusqlite = { version = "0.38.0", features = ["bundled", "functions"] }
tempfile = "3.24.0"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
nucleo = "0.5"
toml = "1.0"
unicode-width = "0.2"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
which = "8.0"
rexpect = "0.6"
